# verus

examples/: sql.rs
examples/sql_spec/: README.md  bridge.rs  executable_impl.rs  high_level_spec.rs  main.rs  mod.rs  physical_algebra.rs  sql_algebra.rs
tools/vstrip/: .gitignore  Cargo.toml  README.md
tools/vstrip/src/: config.rs  error.rs  lib.rs  main.rs  preprocess.rs  visitor.rs
tools/vstrip/tests/: test_golden.rs  test_phase3.rs
tools/vstrip/tests/fixtures/expected/: complex_specs.rs  ensures_blocks.rs  external_body_demo.rs  ghost_fields.rs  ghost_locals.rs  ghost_params.rs  phase2_comprehensive.rs  phase3_expr_proofs.rs  phase3_macros.rs  phase3_quantifiers.rs  proof_blocks.rs  simple.rs  traits.rs
tools/vstrip/tests/fixtures/input/: basic.rs  complex_specs.rs  ensures_blocks.rs  external_body_demo.rs  ghost_fields.rs  ghost_locals.rs  ghost_params.rs  phase2_comprehensive.rs  phase3_expr_proofs.rs  phase3_macros.rs  phase3_quantifiers.rs  proof_blocks.rs  simple.rs  traits.rs
